# just-prs

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark_ld_proxy.py  pyproject.toml  test_dict.py  test_nan.py  test_reflex.py  test_serialize.py  test_serialize2.py  test_static_cols.py
.claude/: settings.json
.githooks/: pre-commit
data/input/: .gitignore
docs/: DAGSTER.md  absolute-risk-methodology.md  benchmarks.md  cleanup-pipeline.md  cli.md  demo-trait-filter.json  demo-trait-ranking.md  features_backlog.md  grch37-universe-build.md  hgdp_1kg-array-scoring.md  metadata-surfacing-plan.md  posterior-quality-gating.md  prs-quality-score.md  python-api.md  refcall-resolution-plan.md  sample-ancestry-methodology.md  scoring-refactor-roadmap.md  validation.md  vcf_flow.md
docs/skills/prs/: SKILL.md
just-prs/: README.md  pyproject.toml
just-prs/benchmarks/: benchmark_engines.py
just-prs/src/just_prs/: __init__.py  absolute_risk.py  array_scoring.py  arrays.py  catalog.py  chip_coverage.py  cleanup.py  cli.py  enrich.py  ftp.py  gwas.py  heritability.py  hf.py  io_utils.py  ld_proxy.py  liftover.py  models.py  normalize.py  ontology.py  prevalence.py  prs.py  prs_catalog.py  quality.py  reference.py  reference_allele.py  scoring.py  vcf.py  viz.py
just-prs/src/just_prs/ancestry/: __init__.py  _projection.py  aadr.py  eigenstrat.py  prive.py
just-prs/tests/: conftest.py  test_ancestry.py  test_array_liftover.py  test_array_scoring.py  test_arrays.py  test_arrays_reference.py  test_catalog.py  test_catalog_accessors.py  test_chip_coverage.py  test_cleanup.py  test_cross_engine.py  test_distributions_sanity.py  test_grch37_universe.py  test_grch37_wgs_restoration.py  test_heritability.py  test_hf.py  test_io_utils.py  test_ld_proxy.py  test_liftover.py  test_normalize_filters.py  test_ontology.py  test_percentile.py  test_plink.py  test_prs.py  test_quality.py  test_reference.py  test_reference_allele.py  test_reference_plink2.py  test_scoring.py  test_scoring_parquet_cache.py  test_vcf.py  test_viz.py
just_prs_workspace/: __init__.py
prs-pipeline/: README.md  pyproject.toml
prs-pipeline/src/prs_pipeline/: __init__.py  ancestry_assets.py  assets.py  checks.py  cli.py  definitions.py  fingerprint.py  metadata_assets.py  resources.py  runtime.py  sensors.py  utils.py
prs-pipeline/tests/: test_cli.py
prs-ui/: .gitignore  README.md  pyproject.toml  rxconfig.py
prs-ui/prs_ui/: __init__.py  cli.py  grid_style.py  mixin.py  prs_ui.py  state.py
prs-ui/prs_ui/components/: __init__.py  prs_section.py  test_grid.py  vcf_source.py  vega_chart.py
prs-ui/prs_ui/pages/: compute.py  faq.py  heritability.py  metadata.py  scoring.py  traits.py
prs-ui/reflex.lock/: package.json
prs-ui/tests/: test_cli.py  test_grid_selection.py  test_row_dict_bridge.py  test_trait_summary.py  test_ui_cli.py
scripts/: build_pgs_quality_scores.py  build_reference_allele_universe.py  rate_prs_quality.py  smoke_test_all_prs.py
src/just_prs/: __init__.py  catalog.py  cleanup.py  cli.py  ftp.py  hf.py  models.py  prs.py  prs_catalog.py  quality.py  scoring.py  vcf.py
tests/: conftest.py  test_catalog.py  test_cleanup.py  test_plink.py  test_reference.py
