[project]
name = "just-prs-workspace"
version = "0.0.0"
description = "Workspace root for just-prs, prs-ui, and prs-pipeline"
requires-python = ">=3.13"
dependencies = [
    "just-prs",
    "prs-ui",
    "prs-pipeline",
]

[project.scripts]
ui = "prs_ui.cli:launch_ui"
pipeline = "prs_pipeline.cli:launch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["just_prs_workspace"]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["just-prs", "prs-ui", "prs-pipeline"]

[tool.uv.sources]
just-prs = { workspace = true }
prs-ui = { workspace = true }
prs-pipeline = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
