[project]
name = "just-prs"
version = "0.4.13"
description = "Polars-bio based tool to compute polygenic risk scores from PGS Catalog"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars-bio>=0.31.0",
    "typer>=0.24.1",
    "rich>=13.9.1",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "eliot>=1.18.0",
    "fsspec[http]>=2026.2.0",
    "huggingface-hub>=1.7.1",
    "python-dotenv>=1.1.0",
    "platformdirs>=4.9.2",
    "zstandard>=0.23.0",
    "duckdb>=1.5.0",
    "psutil>=5.9.0",
    "altair>=6.2.0",
]

[project.optional-dependencies]
# pgenlib has no Windows wheels and its bundled C (libdeflate) fails to compile
# with MSVC, so it is excluded on Windows. pysam (htslib-backed faidx, used only
# by the reference-allele FASTA tier at precompute time) likewise has no Windows
# wheels, so it carries the same marker. The UI / VCF PRS path never needs either
# (reference.py imports both lazily and raises a clear ImportError if missing); the
# runtime reference-allele resolution reads a small precomputed parquet, not pysam.
# Windows users who need reference-panel / .pgen / FASTA features should use WSL/Linux.
reference = [
    "pgenlib>=0.93.0; sys_platform != 'win32'",
    "pysam>=0.23.0; sys_platform != 'win32'",
]
# vl-convert-python is needed only for PNG/SVG raster export; HTML/JSON work
# with altair alone (which is a core dependency).
viz = [
    "vl-convert-python>=1.9.0",
]

[project.scripts]
just-prs = "just_prs.cli:run"
prs = "just_prs.cli:run"

[tool.pytest.ini_options]
markers = [
    "plink2: tests that require the PLINK2 binary (auto-downloaded if not in PATH)",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
