[project]
name = "prs-ui"
version = "0.1.2"
description = "Reusable Reflex UI components for Polygenic Risk Score computation with PGS Catalog"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "just-prs>=0.3.0",
    "reflex>=0.8.27",
    "reflex-mui-datagrid>=0.1.9",
]

[project.scripts]
prs-ui = "prs_ui.prs_ui:main"
ui = "prs_ui.cli:launch_ui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "uploaded_files/",
    ".web/",
    "__pycache__/",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["prs_ui"]

[tool.uv.sources]
just-prs = { workspace = true }
